# MeshDef

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md
include/: pch.h
include/Core/: Application.h  Base.h  EntryPoint.h  Log.h  Scene.h  State.h  WindowsPlatformUtils.h
include/EventSystem/: ApplicationEvent.h  Event.h  Input.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
include/Mesh/: ControlState.h  DeformMesh.h  DrawMesh.h  EdgeHeap.h  EditMesh.h  MeshDeformer3D.h  MeshPybind.h  MeshSimplifier3D.h  MeshUtils.h  Model.h  MultiViewCameras.h  Quadric.h  SimpleMesh.h
include/Panel/: CustomUI.h  MainMenu.h
include/PlatformUtils/: PythonInterpreter.h  WindowsPlatformUtils.h
python/: customRun.py  demo_loss.py  gpt_util.py  handle_selection.py  pytorch_processor.py
python/assets/prompt/: direction.txt  handle_selection.txt  handle_selection_color.txt  prompt.txt  robot.txt
python/pytorch-arap/: demo_loss.py
python/pytorch-arap/pytorch_arap/: arap.py
python/pytorch_arap/: arap.py
src/Core/: Application.cpp  Input.cpp  Log.cpp  Scene.cpp  State.cpp  WindowsPlatformUtils.cpp
src/Mesh/: DeformMesh.cpp  DrawMesh.cpp  EditMesh.cpp  EditMesh.cpp~  MeshSimplifier3D.cpp  MeshUtils.cpp  Model.cpp  MultiViewCameras.cpp  SelfIntersections.cpp  SimpleMesh.cpp
src/Panel/: CustomUI.cpp  MainMenu.cpp
src/PlatformUtils/: PythonInterpreter.cpp  WindowsPlatformUtils.cpp
